Fixes intro image being left aligned over 2000px width

--- a/assets/scss/block/_3-4-0-intro-full-width.scss
+++ b/assets/scss/block/_3-4-0-intro-full-width.scss
@@ -6,7 +6,7 @@
   }
   .b-media__image {
     img {
-      display:block;		  
+//      display:block;		  
       border-bottom:1px solid $color-three;
     }
   }
